--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <body>
     <section id="app"></section>
 
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle.min.js"></script>
   </body>
 </html>
